--- a/views/addSneakers.ejs
+++ b/views/addSneakers.ejs
@@ -16,7 +16,7 @@
 </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark px-3">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
     <div class="d-flex align-items-center gap-2">
       <a class="navbar-brand mb-0" href="/shoes/">We Are Sneakers</a>
