--- a/views/viewSneaker.ejs
+++ b/views/viewSneaker.ejs
@@ -4,25 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title> Sneakers </title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/shoes/">We Are Sneakers</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="/shoes/addSneakers">Add new sneakers</a>
-              </li> 
-            </ul>
-          </div>
-        </div>
-    </nav>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <div class="container-fluid">
+      <div class="d-flex align-items-center">
+        <a class="navbar-brand me-3" href="/shoes/">We Are Sneakers</a>
+        <a href="/shoes/addSneakers" class="btn btn-outline-light btn-sm d-flex align-items-center gap-1 me-3">
+          <i class="bi bi-plus-circle"></i>
+          Add Sneakers
+        </a> 
+     </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+        <ul class="navbar-nav align-items-center">
+          <li class="nav-item me-3">
+            <% if (session && session.user) { %>
+              <span class="text-white">
+                <i class="bi bi-person-circle fs-4"></i> <%= session.user.username %>
+              </span>
+            <% } %>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-outline-light btn-sm mt-1" href="/logout">
+              <i class="bi bi-box-arrow-right"></i> Logout
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     
     <div class="container">
         <br>
