--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -12,15 +13,29 @@
     <div class="container-fluid">
       <div class="d-flex align-items-center">
         <a class="navbar-brand me-3" href="/shoes/">We Are Sneakers</a>
-        <a class="btn btn-outline-light btn-sm" href="/shoes/addSneakers">Add new Sneaker</a>
       </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
-        <ul class="navbar-nav">
+      <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+        <ul class="navbar-nav align-items-center">
+          <li class="nav-item me-3">
+            <% if (session && session.user) { %>
+              <% if (session.user.role === 'admin') { %>
+                <a href="/user/admin" class="d-flex align-items-center text-white text-decoration-none">
+                  <i class="bi bi-person-circle fs-4 me-1"></i> Admin
+                </a>
+              <% } else { %>
+                <a href="/user/userdashboard" class="d-flex align-items-center text-white text-decoration-none">
+                  <i class="bi bi-person-circle fs-4 me-1"></i> <%= session.user.username %>
+                </a>
+              <% } %>
+            <% } %>
+          </li>
           <li class="nav-item">
-            <a class="btn btn-outline-light btn-sm mt-1" href="/logout">Logout</a>
+            <a class="btn btn-outline-light btn-sm mt-1" href="/logout">
+              <i class="bi bi-box-arrow-right"></i> Logout
+            </a>
           </li>
         </ul>
       </div>
