--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,9 +26,15 @@
         <ul class="navbar-nav align-items-center">
           <li class="nav-item me-3">
             <% if (session && session.user) { %>
-              <span class="text-white">
-              <i class="bi bi-person-circle fs-4"></i> <%=  session.user.username %>
-              </span>
+              <% if (session.user.role === 'admin') { %>
+                <a href="/user/admin" class="d-flex align-items-center text-white text-decoration-none">
+                  <i class="bi bi-person-circle fs-4 me-1"></i> Admin
+                </a>
+              <% } else { %>
+                <a href="/user/userdashboard" class="d-flex align-items-center text-white text-decoration-none">
+                  <i class="bi bi-person-circle fs-4 me-1"></i> <%= session.user.username %>
+                </a>
+              <% } %>
             <% } %>
           </li>
           <li class="nav-item">
@@ -63,6 +69,16 @@
 
             <% if (session && session.user && session.user.id === shoe.user_id) { %>
               <a href="/shoes/editSneaker/<%= shoe.id %>" class="btn btn-warning ms-2">Edit</a>
+            <% } %>
+            <% if (session && session.user) { %>
+              <% if (session.user.role === 'admin' || session.user.id === shoe.user_id) { %>
+                <form action="/shoes/deleteSneaker/<%= shoe.id %>" method="POST" style="display:inline;">
+                  <button type="submit" class="btn btn-danger ms-2"
+                    onclick="return confirm('Are you sure you want to delete this sneaker?');">
+                    <i class="bi bi-trash"></i> Delete
+                  </button>
+                </form>
+              <% } %>
             <% } %>
           </div>
         </div>
