--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -12,7 +12,7 @@
     <div class="container-fluid">
       <div class="d-flex align-items-center">
         <a class="navbar-brand me-3" href="/shoes/">We Are Sneakers</a>
-        <a class="btn btn-outline-light btn-sm" href="/shoes/addSneakers">Add new Sneaker</a>
+        <a class="btn btn-outline-light btn-sm" href="/shoes/addSneakers">Add Sneakers</a>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
